--- a/CST339-CLCMilestoneProject/pom.xml
+++ b/CST339-CLCMilestoneProject/pom.xml
@@ -9,14 +9,22 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.gcu</groupId>
-	<artifactId>CST339-CLCMilestoneProject</artifactId>
-	<version>0.0.1</version>
-	<name>CST339-CLCMilestoneProject</name>
-	<description>CLC Milestone Project for CST-339 - Social Media Web App</description>
+	<artifactId>milestone</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>cst339-milestone</name>
+	<description>Milestone Project for GCU CST-339</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
