--- a/CST339-CLCMilestoneProject/src/main/resources/application.properties
+++ b/CST339-CLCMilestoneProject/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# Local Mamp database
 
+spring.datasource.url=jdbc:mysql://localhost:3306/cst339-milestone
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
