--- a/CST339-CLCMilestoneProject/pom.xml
+++ b/CST339-CLCMilestoneProject/pom.xml
@@ -33,7 +33,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -44,8 +43,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		
+		</dependency>	
+			
 		<!-- For REST APIs-->
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
@@ -56,7 +55,17 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.3.3</version>
 			<scope>runtime</scope>
+		</dependency>	
+			
+		<!-- MySQL Database Plugins--> 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>		
 	</dependencies>
 
 	<build>
