--- a/Activities/topic5-1/src/main/resources/application.properties
+++ b/Activities/topic5-1/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 # Mongo Atlas Database
-#spring.data.mongodb.uri=mongodb+srv://jtlewis81:<password>@cluster0.ekbtdfj.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.uri= ask me for it
 #spring.data.mongodb.database=cst339
